@@ -131,6 +131,7 @@
       <label index="full.help"> = The value can be edited in the frontend.</label>
       <label index="display.help"> = The value will only be displayed.</label>
       <label index="none.help"> = kreXX will not display the value.</label>
+      <label index="logging.noteditable">This setting is not editable on the frontend.</label>
 
       <!-- Content Edit Cookie Settings -->
       <label index="editcookie.headline">Edit local cookie settings</label>
