@@ -121,12 +121,10 @@ backtraceAnalysis = "deep"
 ; none    = is not displayed at all
 ; Since the local configuration is stored in a cookie, settings will be
 ; ignored, in case a setting can not be edited.
+; Please note, that the logging options can never be edited on the frontend.
 skin = "full"
 memoryLeft = "full"
 maxRuntime = "full"
-folder = "none"
-maxfiles = "none"
-destination = "full"
 maxCall = "full"
 disabled = "full"
 detectAjax = "full"
