@@ -2,6 +2,7 @@
 - Added analysis metadata to the file output.
 - Change: Restructured the configuration options. The sorting does now
   make more sense than before.
+- Change: The logging options can never be changed on the frontend
 - Bufix / Change: Removed the whole dual-output mess.
 - Change: When the destination is set to 'file' via config file, this
   value can not be overwritten with local cookie settings.
